syntax = "proto3";

option go_package = "./;pb";

service StreamService {
  rpc GetStream (StreamRequest) returns(stream StreamReply);
  rpc PutStream (stream StreamRequest) returns(StreamReply);
  rpc AllStream (stream StreamRequest) returns(stream StreamReply);
}

message StreamRequest {
  string request = 1;
}

message StreamReply {
  string reply = 1;
}